feat: add 2048(Easy).md
1. 2048(Easy).md 내용 추가함.

--- a/acmicpc/12100_2048(Easy).md
+++ b/acmicpc/12100_2048(Easy).md
@@ -155,4 +155,137 @@ class Main {
 # 📑 memo
 
 .
+```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.StringTokenizer;
+
+class Main {
+    private static int N, Max;
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        N = Integer.parseInt(br.readLine());
+        Max = 0;
+        int[][] arr = new int[N][N];
+        for(int i = 0; i < N; i++){
+            StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+            for(int j = 0; j < N; j++){
+                arr[i][j] = Integer.parseInt(st.nextToken());
+                if(Max < arr[i][j]) Max = arr[i][j];
+            }
+        }
+        Dfs(0, arr);
+        bw.write(Integer.toString(Max));
+        br.close();0
+        bw.close();
+    }
+
+    private static void Dfs(int count, int[][] arr) {
+        if(count == 6) return;
+        for(int i = 0; i < 4; i++) {
+            if(i == 0) {
+                Dfs(count + 1, GoLeft(arr));
+            } else if(i == 1) {
+                Dfs(count + 1, GoRight(arr));
+            } else if(i == 2) {
+                Dfs(count + 1, GoUp(arr));
+            } else {
+                Dfs(count + 1, GoDown(arr));
+            }
+        }
+    }
+
+    private static int[][] GoUp(int[][] arr) {
+        int[][] newArr = new int[N][N];
+        for(int j = 0; j < N; j++) {
+            int cnt = 0, beforeArr = -1;
+            for(int i = 0; i < N; i++) {
+                if(arr[i][j] == 0) {
+                    if(beforeArr != -1) newArr[cnt++][j] = beforeArr;
+                    beforeArr = -1;
+                } else if(beforeArr == arr[i][j]) {
+                    newArr[cnt++][j] = 2 * arr[i][j];
+                    beforeArr = -1;
+                } else {
+                    if(beforeArr != -1) newArr[cnt++][j] = beforeArr;
+                    beforeArr = arr[i][j];
+                }
+                Max = Math.max(Max, arr[i][j]);
+            }
+            if(beforeArr != -1) newArr[cnt][j] = beforeArr;
+        }
+        return newArr;
+    }
+
+    private static int[][] GoDown(int[][] arr) {
+        int[][] newArr = new int[N][N];
+        for(int j = 0; j < N; j++) {
+            int cnt = N - 1, beforeArr = -1;
+            for(int i = N - 1; i >= 0; i--) {
+                if(arr[i][j] == 0) {
+                    if(beforeArr != -1) newArr[cnt--][j] = beforeArr;
+                    beforeArr = -1;
+                } else if(beforeArr == arr[i][j]) {
+                    newArr[cnt--][j] = 2 * arr[i][j];
+                    beforeArr = -1;
+                } else {
+                    if(beforeArr != -1) newArr[cnt--][j] = beforeArr;
+                    beforeArr = arr[i][j];
+                }
+                Max = Math.max(Max, arr[i][j]);
+            }
+            if(beforeArr != -1) newArr[cnt][j] = beforeArr;
+        }
+        return newArr;
+    }
+
+    private static int[][] GoLeft(int[][] arr) {
+        int[][] newArr = new int[N][N];
+        for(int i = 0; i < N; i++) {
+            int cnt = 0, beforeArr = -1;
+            for(int j = 0; j < N; j++) {
+                if(arr[i][j] == 0) {
+                    if(beforeArr != -1 && beforeArr != -2) newArr[i][cnt++] = beforeArr;
+                    beforeArr = -1;
+                } else if(beforeArr == arr[i][j]) {
+                    newArr[i][cnt++] = 2 * arr[i][j];
+                    beforeArr = -2;
+                } else {
+                    if(beforeArr != -1) newArr[i][cnt++] = beforeArr;
+                    beforeArr = arr[i][j];
+                }
+                Max = Math.max(Max, arr[i][j]);
+            }
+            if(beforeArr != -1) newArr[i][cnt] = beforeArr;
+        }
+        return newArr;
+    }
+
+    private static int[][] GoRight(int[][] arr) {
+        int[][] newArr = new int[N][N];
+        for(int i = 0; i < N; i++) {
+            int cnt = N - 1, beforeArr = -1;
+            for(int j = N - 1; j >= 0; j--) {
+                if(arr[i][j] == 0) {
+                    if(beforeArr != -1) newArr[i][cnt--] = beforeArr;
+                    beforeArr = -1;
+                } else if(beforeArr == arr[i][j]) {
+                    newArr[i][cnt--] = 2 * arr[i][j];
+                    beforeArr = -1;
+                } else {
+                    if(beforeArr != -1) newArr[i][cnt--] = beforeArr;
+                    beforeArr = arr[i][j];
+                }
+                Max = Math.max(Max, arr[i][j]);
+            }
+            if(beforeArr != -1) newArr[i][cnt] = beforeArr;
+        }
+        return newArr;
+    }
+}
+```
 
