--- a/acmicpc/3190_뱀.md
+++ b/acmicpc/3190_뱀.md
@@ -89,5 +89,88 @@ class Main {
 
 # 📑 memo
 
-.
+```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.*;
+
+class Pair {
+    int x;
+    int y;
+    Pair(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+class Main {
+    private static int N;
+    private static int[][] list;
+    private static final int[] X = {1, 0, -1, 0};
+    private static final int[] Y = {0, 1, 0, -1};
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        N = Integer.parseInt(br.readLine());
+        list = new int[N][N];
+        int K = Integer.parseInt(br.readLine());
+        for(int i = 0; i < K; i++) {
+            StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+            int y = Integer.parseInt(st.nextToken());
+            int x = Integer.parseInt(st.nextToken());
+            list[y - 1][x - 1] = -1; // apple
+        }
+        HashMap<Integer, String> timeList = new HashMap<>();
+        int L = Integer.parseInt(br.readLine());
+        for(int i = 0; i < L; i++) {
+            StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+            timeList.put(Integer.parseInt(st.nextToken()), st.nextToken());
+        }
+        int direct = 0, x = 0, y = 0, time = 0, S = 0;
+        Deque<Pair> snake = new LinkedList<>();
+        snake.add(new Pair(0, 0));
+        while(!isCrashSnake(snake) && isInRange(x, y)) {
+            x += X[direct];
+            y += Y[direct];
+            if(timeList.containsKey(time)) {
+                if(timeList.get(time).equals("D")) {
+                    direct = (direct + 1) % 4;
+                } else if(timeList.get(time).equals("L")) {
+                    direct = (direct - 1) % 4;
+                }
+            }
+            Pair before = snake.pollFirst();
+            assert before != null;
+            snake.offerFirst(new Pair(before.x, before.y));
+            snake.offerFirst(new Pair(before.x + X[direct], before.y + Y[direct]));
+            if(list[y][x] == -1) {
+                list[y][x] = 0;
+            } else {
+                snake.pollLast();
+            }
+            time++;
+            System.out.println(x + " " + y + " " + direct + " " + time);
+            for(Pair pair : snake) {
+                System.out.println(pair.x + " " + pair.y);
+            }
+            System.out.println(isCrashSnake(snake) + " " + isInRange(x, y));
+            System.out.println();
+        }
+        bw.write(Integer.toString(time));
+        br.close();
+        bw.close();
+    }
+
+    private static boolean isInRange(int x, int y) {
+        return 0 <= x && x < N && 0 <= y && y < N;
+    }
+
+    private static boolean isCrashSnake(Queue<Pair> snake) {
+        return snake.size() != snake.stream().distinct().count();
+    }
+}
+```
 
