--- a/acmicpc/14052_연구소.md
+++ b/acmicpc/14052_연구소.md
@@ -1,7 +1,96 @@
 # 📕 Solution
 
 ```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.LinkedList;
+import java.util.Queue;
+import java.util.StringTokenizer;
 
+class Main {
+    private static int Max;
+    private static final int[] X = { -1, 0, 1, 0 };
+    private static final int[] Y = { 0, -1, 0, 1 };
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+        int N = Integer.parseInt(st.nextToken());
+        int M = Integer.parseInt(st.nextToken());
+        int[][] arr = new int[N][M];
+        for(int i = 0; i < N; i++) {
+            st = new StringTokenizer(br.readLine(), " ");
+            for(int j = 0; j < M; j++) {
+                arr[i][j] = Integer.parseInt(st.nextToken());
+            }
+        }
+        Max = Integer.MIN_VALUE;
+        dfs(0, arr, N, M);
+        bw.write(Integer.toString(Max));
+        br.close();
+        bw.close();
+    }
+
+    private static void dfs(int count, int[][] arr, int n, int m) {
+        if(count == 3) {
+            Check(arr, n, m);
+            return;
+        }
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(arr[i][j] == 0) {
+                    arr[i][j] = 1;
+                    dfs(count + 1, arr, n, m);
+                    arr[i][j] = 0;
+                }
+            }
+        }
+    }
+
+    private static void Check(int[][] arr, int n, int m) {
+        int count = 0;
+        Queue<Pair> queue = new LinkedList<>();
+        int[][] afterArr = new int[n][m];
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                afterArr[i][j] = arr[i][j];
+                if(arr[i][j] == 2) queue.add(new Pair(i, j));
+            }
+        }
+        while (!queue.isEmpty()) {
+            Pair node = queue.poll();
+            int x = node.x;
+            int y = node.y;
+            for(int i = 0; i < 4; i++) {
+                int nextX = x + X[i];
+                int nextY = y + Y[i];
+                if(nextX < 0 || nextX >= n) continue;
+                if(nextY < 0 || nextY >= m) continue;
+                if(afterArr[nextX][nextY] != 0) continue;
+                afterArr[nextX][nextY] = 2;
+                queue.offer(new Pair(nextX, nextY));
+            }
+        }
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(afterArr[i][j] == 0) count++;
+            }
+        }
+        Max = Math.max(Max, count);
+    }
+
+    private static class Pair {
+        int x;
+        int y;
+        Pair(int x, int y) {
+            this.x = x;
+            this.y = y;
+        }
+    }
+}
 ```
 
 ## ❌ fail
@@ -12,25 +101,4 @@
 
 # 📑 memo
 
-```java
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.util.StringTokenizer;
-
-class Main {
-    public static void main(String[] args) throws IOException {
-        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
-        int N = Integer.parseInt(br.readLine());
-        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
-        StringBuilder sb = new StringBuilder();
-        bw.write(sb.toString());
-        br.close();
-        bw.close();
-    }
-}
-```
-
+.
